change tags' color fix spacing problems on blog

--- a/client/app/projects/blog/blog.less
+++ b/client/app/projects/blog/blog.less
@@ -1,12 +1,15 @@
-#titleEdit {
-    height: 30px;
-}
+.project-blogs{
+	h2.title {
+	    padding-left: 15px;
+	}
 
-#contentEdit {
-    height: 150px;
-    width: 100%;
-}
-.blog-tag .tech-tags {
-	padding : 0px;
-	margin-top: -10px;
+	.tech-tags {
+		padding : 0px;
+		span{
+			background-color: #c0d6ec;
+			a {
+				color: #545454;
+			}
+		}
+	}
 }
