--- a/client/components/tag/tag.less
+++ b/client/components/tag/tag.less
@@ -1,9 +1,9 @@
 .tech-tags {
-    padding: 10px;
+    padding: 10px 10px 10px 0;
     span {
       padding: 5px 10px;
       display: inline-block;
-      background-color: #ddeeff;
+      background-color: #eee;
       margin-right: 5px;
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
